Reorganiza características: adiciona climatização e ponto carro elétrico, remove seção especificações técnicas

--- a/index.html
+++ b/index.html
@@ -311,35 +311,6 @@
             line-height: 1.6;
         }
 
-        /* Specifications */
-        .specifications {
-            padding: 40px;
-        }
-
-        .spec-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
-        }
-
-        .spec-card {
-            background: var(--light-gray);
-            padding: 25px;
-            border-radius: 12px;
-            border-left: 4px solid var(--accent-color);
-        }
-
-        .spec-card h4 {
-            color: var(--primary-color);
-            margin-bottom: 10px;
-            font-weight: 600;
-        }
-
-        .spec-card p {
-            color: var(--medium-gray);
-            font-size: 0.95rem;
-        }
-
         /* Contact Section */
         .contact-section {
             background: var(--primary-color);
@@ -557,7 +528,7 @@
                     <div class="feature-card">
                         <div class="feature-icon"><i class="fas fa-swimming-pool"></i></div>
                         <h3 class="feature-title">Aquecimento de Piscina</h3>
-                        <p class="feature-description">Sistema com trocador de calor e aquecimento solar</p>
+                        <p class="feature-description"> de aquecimento central com trocador de calor.</p>
                     </div>
                     <div class="feature-card">
                         <div class="feature-icon"><i class="fas fa-door-open"></i></div>
@@ -567,7 +538,7 @@
                     <div class="feature-card">
                         <div class="feature-icon"><i class="fas fa-gem"></i></div>
                         <h3 class="feature-title">Acabamentos Nobres</h3>
-                        <p class="feature-description">Pias em granito São Gabriel escovado, escada e lavabo em Quartzo Branco.</p>
+                        <p class="feature-description">Quartzo Branco, São Gabriel Escovado, Revestimentos Portobello, Eliane e Biancogres.</p>
                     </div>
                     <div class="feature-card">
                         <div class="feature-icon"><i class="fas fa-star"></i></div>
@@ -577,7 +548,7 @@
                     <div class="feature-card">
                         <div class="feature-icon"><i class="fas fa-car-battery"></i></div>
                         <h3 class="feature-title">Energia Sustentável</h3>
-                        <p class="feature-description">Geração fotovoltaica e ponto para carro elétrico na garagem</p>
+                        <p class="feature-description">Geração de energia com sistema fotovoltaico de última geração.</p>
                     </div>
                     <div class="feature-card">
                         <div class="feature-icon"><i class="fas fa-hot-tub"></i></div>
@@ -587,48 +558,22 @@
                     <div class="feature-card">
                         <div class="feature-icon"><i class="fas fa-window-maximize"></i></div>
                         <h3 class="feature-title">Esquadrias Motorizadas</h3>
-                        <p class="feature-description">Padrão Gold 2,50m altura com mosqueteiro e controle remoto</p>
+                        <p class="feature-description">Janelas padrão Gold de 2,5m de altura com mosqueteiro,  acionamento motorizado via controle remoto ou Wi-fi.</p>
                     </div>
                     <div class="feature-card">
                         <div class="feature-icon"><i class="fas fa-fire"></i></div>
                         <h3 class="feature-title">Aquecimento Central</h3>
                         <p class="feature-description">Boiler com sistema de aquecimento central de água</p>
                     </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- Specifications -->
-        <div class="content-section fade-in">
-            <div class="section-header">
-                <h2 class="section-title">Especificações Técnicas</h2>
-                <p class="section-subtitle">Detalhes técnicos e acabamentos</p>
-            </div>
-            <div class="specifications">
-                <div class="spec-grid">
-                    <div class="spec-card">
-                        <h4>Esquadrias Premium</h4>
-                        <p>Padrão Gold preto reforçado, 2,50m altura, motorizadas com controle remoto e mosqueteiro</p>
+                    <div class="feature-card">
+                        <div class="feature-icon"><i class="fas fa-snowflake"></i></div>
+                        <h3 class="feature-title">Climatização Completa</h3>
+                        <p class="feature-description">Pontos de ar condicionado em todos os quartos, suítes e sala de TV</p>
                     </div>
-                    <div class="spec-card">
-                        <h4>Sistema Hidráulico</h4>
-                        <p>Aquecimento central de água (Boiler) e aquecimento solar para piscina</p>
-                    </div>
-                    <div class="spec-card">
-                        <h4>Energia Sustentável</h4>
-                        <p>Sistema fotovoltaico e ponto de alimentação para carro elétrico na garagem</p>
-                    </div>
-                    <div class="spec-card">
-                        <h4>Automação</h4>
-                        <p>Iluminação inteligente conectada com Alexa e controle via celular</p>
-                    </div>
-                    <div class="spec-card">
-                        <h4>Climatização</h4>
-                        <p>Pontos de ar condicionado em todos os quartos, closets e sala de TV</p>
-                    </div>
-                    <div class="spec-card">
-                        <h4>Acabamentos Especiais</h4>
-                        <p>Banheira de imersão na suíte master e box até o teto em todos os banheiros</p>
+                    <div class="feature-card">
+                        <div class="feature-icon"><i class="fas fa-charging-station"></i></div>
+                        <h3 class="feature-title">Ponto para Carro Elétrico</h3>
+                        <p class="feature-description">Ponto de alimentação específico para carregamento de veículos elétricos na garagem</p>
                     </div>
                 </div>
             </div>
