Cria QR code simplificado para impressão A4 e adiciona proprietário Vitor nos contatos

--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
                     <div class="feature-card">
                         <div class="feature-icon"><i class="fas fa-swimming-pool"></i></div>
                         <h3 class="feature-title">Aquecimento de Piscina</h3>
-                        <p class="feature-description"> de aquecimento central com trocador de calor.</p>
+                        <p class="feature-description">Sistema de aquecimento central com trocador de calor.</p>
                     </div>
                     <div class="feature-card">
                         <div class="feature-icon"><i class="fas fa-door-open"></i></div>
@@ -594,7 +594,8 @@
                     Estamos prontos para agendar uma visita e apresentar todos os detalhes desta casa única.
                 </p>
                 <div style="margin-top: 25px; font-size: 1rem; opacity: 0.7;">
-                    <i class="fas fa-phone"></i> (11) 98272-0837
+                    <i class="fas fa-phone"></i> (11) 98272-0837<br>
+                    <strong>Proprietário: Vitor</strong>
                 </div>
             </div>
         </div>
