Adiciona Condomínio Morada dos Pinheiros ao endereço e redesenha QR code simples: QR maior (500px), contato no final, sem fundo verde, WhatsApp ao lado do número

--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
                 <i class="fas fa-home"></i> Casa de Luxo
             </div>
             <div style="font-size: 0.9rem; color: var(--medium-gray);">
-                À venda • Alameda das Paineiras, 777
+                À venda • Alameda das Paineiras, 777 - Condomínio Morada dos Pinheiros
             </div>
         </div>
     </div>
@@ -456,8 +456,8 @@
         <h1>Casa de Alto Padrão</h1>
         <p class="hero-subtitle">Arquitetura moderna com tecnologia inteligente</p>
         <p class="hero-address">
-            <a href="https://maps.google.com/?q=Alameda+das+Paineiras+777" target="_blank" style="color: white; text-decoration: none; transition: opacity 0.3s ease;">
-                <i class="fas fa-map-marker-alt"></i> Alameda das Paineiras, 777
+            <a href="https://maps.google.com/?q=Alameda+das+Paineiras+777+Condominio+Morada+dos+Pinheiros" target="_blank" style="color: white; text-decoration: none; transition: opacity 0.3s ease;">
+                <i class="fas fa-map-marker-alt"></i> Alameda das Paineiras, 777 - Condomínio Morada dos Pinheiros
             </a>
         </p>
         
@@ -553,7 +553,7 @@
                     <div class="feature-card">
                         <div class="feature-icon"><i class="fas fa-hot-tub"></i></div>
                         <h3 class="feature-title">Suíte Master Premium</h3>
-                        <p class="feature-description">Banheira de imersão com acabamentos em dourado</p>
+                        <p class="feature-description">Banheira de imersão, chuveiro duplo de teto, cuba dupla, acabamentos em dourado.</p>
                     </div>
                     <div class="feature-card">
                         <div class="feature-icon"><i class="fas fa-window-maximize"></i></div>
@@ -630,7 +630,7 @@
         // WhatsApp function
         function openWhatsApp() {
             const phoneNumber = "5511982720837";
-            const message = "Olá! Tenho interesse na casa de luxo da Alameda das Paineiras, 777. Gostaria de agendar uma visita.";
+            const message = "Olá! Tenho interesse na casa de luxo da Alameda das Paineiras, 777 - Condomínio Morada dos Pinheiros. Gostaria de agendar uma visita.";
             const whatsappURL = `https://wa.me/${phoneNumber}?text=${encodeURIComponent(message)}`;
             window.open(whatsappURL, '_blank');
         }
