--- a/index.html
+++ b/index.html
@@ -575,6 +575,11 @@
                         <h3 class="feature-title">Ponto para Carro Elétrico</h3>
                         <p class="feature-description">Ponto de alimentação específico para carregamento de veículos elétricos na garagem</p>
                     </div>
+                        <div class="feature-card">
+                        <div class="feature-icon"><i class="fas fa-chair"></i></div>
+                        <h3 class="feature-title">Móveis planejados</h3>
+                        <p class="feature-description">Banheiros das suítes com móveis planejados resistentes a umidade.</p>
+                    </div>
                 </div>
             </div>
         </div>
